force-app/main/default/objects/Passenger__c/Passenger__c.object-meta.xml
<CustomObject>
    <label>Passenger</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passenger</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>