force-app/main/default/objects/Passenger__c/fields/Contact_PAX_separately__c.field-meta.xml
<CustomField>
    <fullName>Contact_PAX_separately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact PAX separately</label>
    <type>Checkbox</type>
</CustomField>