force-app/main/default/objects/Passenger__c/fields/Dietary_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirement__c</fullName>
    <label>Dietary Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>