force-app/main/default/objects/Passenger__c/fields/Drop_Location__c.field-meta.xml
<CustomField>
    <fullName>Drop_Location__c</fullName>
    <label>Drop Location</label>
    <type>TextArea</type>
</CustomField>