force-app/main/default/objects/Passenger__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <formula>Option_Surchange__c +  Single_Occupancy_Charge__c +  HSS_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>