force-app/main/default/objects/Passenger__c/fields/HSS_Amount__c.field-meta.xml
<CustomField>
    <fullName>HSS_Amount__c</fullName>
    <formula>Order_Line_Items__r.HSS_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>