force-app/main/default/objects/Passenger__c/fields/Medical_Condition_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Medical_Condition_Reqs__c</fullName>
    <label>Medical Condition/Reqs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>