force-app/main/default/objects/Passenger__c/fields/Nett_Amount__c.field-meta.xml
<CustomField>
    <fullName>Nett_Amount__c</fullName>
    <formula>Gross_Amount__c- Total_Coupon_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nett Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>