force-app/main/default/objects/Passenger__c/fields/Option_Surchange__c.field-meta.xml
<CustomField>
    <fullName>Option_Surchange__c</fullName>
    <formula>Order_Line_Items__r.Departure_Date__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Surchange</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>