force-app/main/default/objects/Passenger__c/fields/Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Items__c</fullName>
    <label>Order Line Items</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Orders__c</field>
            <operation>equals</operation>
            <valueField>Order_Line_Items__c.Orders__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order_Line_Items__c</referenceTo>
    <relationshipLabel>Passenger</relationshipLabel>
    <relationshipName>Passenger</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>