force-app/main/default/objects/Passenger__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orders</label>
    <referenceTo>Orders__c</referenceTo>
    <relationshipLabel>Passenger</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>Lookup</type>
</CustomField>