force-app/main/default/objects/Passenger__c/fields/Pick_up_location__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_location__c</fullName>
    <label>Pick-up location</label>
    <type>TextArea</type>
</CustomField>