force-app/main/default/objects/Passenger__c/fields/PIF_Finalized__c.field-meta.xml
<CustomField>
    <fullName>PIF_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PIF Finalized</label>
    <type>Checkbox</type>
</CustomField>