force-app/main/default/objects/Passenger__c/fields/Prefer_Date_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Prefer_Date_of_Departure__c</fullName>
    <label>Prefer Date of Departure</label>
    <type>Date</type>
</CustomField>