force-app/main/default/objects/Passenger__c/fields/Single_Occupancy_Charge__c.field-meta.xml
<CustomField>
    <fullName>Single_Occupancy_Charge__c</fullName>
    <formula>IF(ISPICKVAL(Passenger_Type__c, &quot;Single&quot;) , Order_Line_Items__r.Departure_Date__r.Single_Occupancy__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Single Occupancy Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>