force-app/main/default/objects/Passenger__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>