force-app/main/default/objects/Passenger__c/fields/Total_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Outstanding__c</fullName>
    <formula>Nett_Amount__c- Total_Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>