force-app/main/default/objects/Passenger__c/fields/Total_Coupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Coupon_Amount__c</fullName>
    <label>Total Coupon Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>