force-app/main/default/objects/Passenger__c/fields/Total_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Received__c</fullName>
    <label>Total Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>