force-app/main/default/objects/Passenger__c/fields/Total_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount__c</fullName>
    <formula>IF(Total_Payment_Received__c&gt;Nett_Amount__c, Total_Payment_Received__c - Nett_Amount__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>